RESOLVED FIXED182491
REGRESSION (r222795): Nike app "Refused to set unsafe header" when adding and viewing cart
https://bugs.webkit.org/show_bug.cgi?id=182491
Summary REGRESSION (r222795): Nike app "Refused to set unsafe header" when adding and...
Daniel Bates
Reported 2018-02-05 09:50:32 PST
Similar to the fix in bug #181693, exempt Nike app on iOS from the XHR header restriction added in bug #177824.
Attachments
Patch (4.02 KB, patch)
2018-02-05 09:56 PST, Daniel Bates
no flags
Daniel Bates
Comment 1 2018-02-05 09:53:47 PST
Daniel Bates
Comment 2 2018-02-05 09:56:06 PST
Brent Fulgham
Comment 3 2018-02-05 10:32:38 PST
Comment on attachment 333089 [details] Patch r=me.
Daniel Bates
Comment 4 2018-02-05 12:46:51 PST
Comment on attachment 333089 [details] Patch Clearing flags on attachment: 333089 Committed r228114: <https://trac.webkit.org/changeset/228114>
Daniel Bates
Comment 5 2018-02-05 12:46:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.