REGRESSION (r222795): Nike app "Refused to set unsafe header" when adding and viewing cart https://bugs.webkit.org/show_bug.cgi?id=182491 <rdar://problem/36533447>

Reviewed by Brent Fulgham.

Exempt Nike from the XHR header restrictions in r222795.

Following r222795 only Dashboard widgets are allowed to set arbitrary XHR headers.
However Nike also depends on such functionality.

Source/WebCore:

* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isNike):

Source/WebKit:

* UIProcess/API/Cocoa/WKWebView.mm:
(shouldAllowSettingAnyXHRHeaderFromFileURLs):

Canonical link: https://commits.webkit.org/198295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228114 268f45cc-cd09-0410-ab3c-d52691b4dbfc